@@ -1,3 +1,10 @@
+2006-09-17  Benoît Dejean  <benoit@placenet.org>
+
+	* src/Makefile.am:
+	* src/procman.c: (main):
+	
+	Fixed locales dir initialization.
+
 2006-09-16  Benoît Dejean  <benoit@placenet.org>
 
 	* configure.in:
